fix like buttons not showing up in profile and cards not displaying properly with different sized images

--- a/src/blocks/card.css
+++ b/src/blocks/card.css
@@ -2,8 +2,8 @@
   border-radius: 19px;
   border: 1px solid #0000004d;
   background-color: #e9e9e9;
-  max-height: 328px;
-  max-width: 328px;
+  height: 328px;
+  width: 328px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -52,4 +52,5 @@
 
 .card-item__card-image {
   width: 328px;
+  height: 328px;
 }
